...
        case .raid0: "RAID 0"
        case .raid1: "RAID 1"
        case .raid5: "RAID 5"
        case .raid6: "RAID 6"
        case .raid10: "RAID 10"
        case .jbod: "JBOD"
        case .raid50: "RAID 50"
        case .raid60: "RAID 60"
        case .raidz1: "RAID-Z1"
        case .raidz2: "RAID-Z2"
        case .raidz3: "RAID-Z3"
        }
    }

...
    case data
    case parity
    case mirror
}

enum CapacityUnit: String, CaseIterable, Identifiable {
    case gb = "GB"
    case tb = "TB"
    
    var id: String { rawValue }
}

struct RaidConfiguration {
    var level: RaidLevel
...
